Fixed some location problems for building

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 *.class
 *.log
-# ide specific
-.idea/
 
 # sbt specific
 .cache/
@@ -20,3 +18,4 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+.idea
